add confirmation of signup

--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
             <div class="col-sm-12">
                 <h2 class="titletext smaller">Welcome</h2>
                 <h2 class="titletext smaller" >{{index.contact.name}}</h2>
+                <h2 class="titletext reply" >{{index.reply}}</h2>
             </div>
 </body>
 </html>
