design changes index.html *smaller text on smaller screen

--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,12 @@
 <body ng-controller="IndexController as index">
 <div class="background-image-overlay"></div>
 <div class="container">
+            <div class="row">
                 <div class="page-header">
                     <h1 class="titletext">STOPWATCH</h1>
                 </div>
+            </div>
+
             <div class="col-sm-12" style="margin-top:-30px; margin-bottom:20px;">
                 <p class="form-title">
                     Sign up
