--- a/public/contactlist.html
+++ b/public/contactlist.html
@@ -12,6 +12,11 @@
 
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     	<script src= "https://ajax.googleapis.com/ajax/libs/angularjs/1.3.12/angular.min.js"></script>
+
+	<!-- sweetalert -->
+	<script src="sweetalert/sweet-alert.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="sweetalert/sweet-alert.css">
+	<script type="text/javascript" src="sweetalert/ngSweetAlert.js"></script>
 	<script src="controllers/controller.js"></script>
 </head>
 <body>
@@ -28,16 +33,12 @@
 				<tr ng-repeat="contact in contactlist">
 					<td>{{contact.name}}</td>
 					<td>{{contact.email}}</td>
-					<td><button class="btn btn-danger" ng-click="removeContact(contact._id)">Remove</button></td>
+					<td><button class="btn btn-danger" ng-click="confirm(contact.name, contact._id)">Remove</button></td>
 				</tr>
 
 			</tbody>
 		</table>
-
 	</div>
-
-
-
 
 
 </body>
