--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.12/angular.min.js"></script>
     <script src="controllers/controller.js"></script>
 
+        <!-- sweetalert -->
+    <script src="sweetalert/sweet-alert.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="sweetalert/sweet-alert.css">
+    <script type="text/javascript" src="sweetalert/ngSweetAlert.js"></script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body ng-controller="IndexController as index">
